board - deletion and filling of tyles

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <p>New game</p>
+    <script type="text/javascript" src="/javascripts/main.js"></script>
   </body>
 </html>
